--- a/常用命令.md
+++ b/常用命令.md
@@ -182,3 +182,5 @@ public class HelloWorld
 
 
 find . -type f -iname \*.fot -delete    删除指定后缀的文件从当前目录开始查找
+rpm格式转化工具*fakeroot*
+sudo fakeroot alien /tmp/mozilla_kali0/zenmap-7.92-1.noarch.rpm
